[tool.poetry]
name = "pychatgpt"
version = "0.1.0"
description = ""
authors = ["Gavin Wood <gavin@baawolf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
PyAudio = "^0.2.13"
pvporcupine = "^2.1.4"
python-dotenv = "^1.0.0"
pyttsx3 = "^2.90"
pvrecorder = "^1.1.1"
pydub = "^0.25.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
